Throughput probing decrease metrics are not being updated

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0, 8.0.12
    • Affects Version/s: None
    • Component/s: None
    • None
    • Workload Resilience
    • Fully Compatible
    • ALL
    • v8.0
    • Workload Scheduling 2025-02-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The metrics for throughput probing include timesIncreased, timesDecreased, totalAmountIncreased, totalAmountDecreased, and resizeDurationMicros. However, timesDecreased and totalAmountDecreased are never updated, since the _probeDown method mistakenly increments timesIncreased and totalAmountIncreased.

      This is making it harder to diagnose problems with throughput probing. We should fix this and backport it to affected versions.

            Assignee:
            Dominic Hernandez (Inactive)
            Reporter:
            Vojislav Stojkovic
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: