SERVER-99342: Throughput probing decrease metrics are not being updated (#31407)

GitOrigin-RevId: 110b6a57e0d924dd455c7ab94a41cc1deac1caea